Next Release

  - Supervisorctl now correctly interprets all of the error codes that can
    be returned when starting a process.  Patch by Francesc Alted.

  - New 'stdout_events_enabled' and 'stderr_events_enabled' config options
    have been added to the '[program:x]', '[fcgi-program:x]', and 
    '[eventlistener:x]' sections.  These enable the emitting of new 
    PROCESS_LOG events for a program.  If unspecified, the default is False.

    If enabled for a subprocess, and data is received from the stdout or
    stderr of the subprocess while not in the special capture mode used by 
    PROCESS_COMMUNICATION, an event will be emitted.

    Event listeners can subscribe to either PROCESS_LOG_STDOUT or 
    PROCESS_LOG_STDERR individually, or PROCESS_LOG for both.

  - Values for subprocess environment variables specified with environment=
    in supervisord.conf can now be optionally quoted, allowing them to 
    contain commas.  Patch by Tim Godfrey.

  - Added a new event type, REMOTE_COMMUNICATION, that is emitted by a new
    RPC method, supervisor.sendRemoteCommEvent().

  - Patch for bug #268 (KeyError on 'here' expansion for stdout/stderr_logfile)
    from David E. Kindred.

  - Add ``reread``, ``update``, and ``avail`` commands based on Anders
    Quist's ``online_config_reload.diff`` patch.  This patch extends
    the "add" and "drop" commands with automagical behavior::

      In supervisorctl:

        supervisor> status
        bar                              RUNNING    pid 14864, uptime 18:03:42
        baz                              RUNNING    pid 23260, uptime 0:10:16
        foo                              RUNNING    pid 14866, uptime 18:03:42
        gazonk                           RUNNING    pid 23261, uptime 0:10:16
        supervisor> avail
        bar                              in use    auto      999:999
        baz                              in use    auto      999:999